--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,13 @@
         <h2 align="center">Number Project!!!</h2>
         <button
           class="btn btn-primary"
-          (click)="onlyOdd = !onlyOdd">Onlu show odd numbers</button>
+          (click)="onlyOdd = !onlyOdd">Only show odd numbers</button>
         <ul>
+
+          <!-- <li *ngFor="let number of numbers">
+            {{ number }}
+          </li> -->
+
           <div *ngIf="onlyOdd">
             <li
               class="list-group-item" 
