--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-12">
-        <h2 align="center">Number Project!!!</h2>
+        <h2 align="center">Number Project</h2>
         <button
           class="btn btn-primary"
           (click)="onlyOdd = !onlyOdd">Only show odd numbers</button>
