--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <div class="container">
   <div class="row">
     <div class="col-12">
-        <h2 align="center">Number Project</h2>
+        <h2 
+          align="center" 
+          [ngClass]="'red'">Number Project</h2>
         <button
           class="btn btn-primary"
           (click)="onlyOdd = !onlyOdd">Only show odd numbers</button>
@@ -21,7 +23,7 @@
             </li>
           </div>
 
-          <div *ngIf="!onlyOdd">
+          <!-- <div *ngIf="!onlyOdd">
             <li
               class="list-group-item" 
               [ngClass]="{odd: even % 2 !== 0}"
@@ -29,10 +31,30 @@
               *ngFor="let even of evenNumbers">
               {{ even }}
             </li>
-          </div>          
+          </div>           -->
+
+          <!-- <div *appUnLess="onlyOdd">
+            <li
+              class="list-group-item" 
+              [ngClass]="{odd: even % 2 !== 0}"
+              [ngStyle]="{backgroundColor: even % 2 !== 0 ? 'gray' : 'transparent'}"
+              *ngFor="let even of evenNumbers">
+              {{ even }}
+            </li>
+          </div>  -->
+          
         </ul>
 
         <p appBasicHighlight>Use directive style</p>
+        <p appBetterHighlight [activeColor]="'purple'" [defaultColor]="'green'">Use directive style</p>
+
+        <div [ngSwitch]="value">
+          <p *ngSwitchCase="5">Value is 5</p>
+          <p *ngSwitchCase="10">Value is 10</p>
+          <p *ngSwitchCase="8">Value is 8</p>
+          <p *ngSwitchDefault>Value is not search</p>
+        </div>
+
     </div>
   </div>
 </div>
